@@ -54,7 +54,8 @@ if(FALSE) ## here are the individual function
       ## These are *NOT* in R's  Math group, but 1-argument math functions
       ## available in the mpfr - library:
       "erf" = 101, "erfc" = 102, "zeta" = 104, "Eint" = 106, "Li2" = 107,
-      "j0" = 111, "j1" = 112, "y0" = 113, "y1" = 114)
+      "j0" = 111, "j1" = 112, "y0" = 113, "y1" = 114,
+      "Ai" = 120) # Airy function (new in mpfr 3.0.0)
 storage.mode(.Math.codes) <- "integer"
 
 if(FALSE)
@@ -93,14 +94,14 @@ setMethod("log", signature(x = "mpfr"),
 	  function(x, base) {
 	      if(!missing(base) && base != exp(1))
 		  stop("base != exp(1) is not yet implemented")
-	      x@.Data[] <- .Call("Math_mpfr", x, .Math.codes["log"],
+	      x@.Data[] <- .Call("Math_mpfr", x, .Math.codes[["log"]],
 				 PACKAGE="Rmpfr")
 	      x
 	  })
 
 setMethod("Math", signature(x = "mpfr"),
 	  function(x) {
-	      x@.Data[] <- .Call("Math_mpfr", x, .Math.codes[.Generic],
+	      x@.Data[] <- .Call("Math_mpfr", x, .Math.codes[[.Generic]],
 			   PACKAGE="Rmpfr")
 	      x
 	  })
